[metadata]
name = toquevee
version = 0.1.0
author = wbydo
author_email = wbydo@users.noreply.github.com
description = convert jupyter notebook to Quiver notebook
url = https://github.com/wbydo/toquevee
license = MIT

[options]
packages = find:
install_requires =
    nbconvert >= 5.3
    traitlets >= 4.3
